k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incodedemo-api
  labels:
    app: incodedemo-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: incodedemo-api
  template:
    metadata:
      labels:
        app: incodedemo-api
    spec:
      # --- AFFINITY SECTION ---
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            # Rule 1: High Priority - Spread across Availability Zones
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: incodedemo-api
                topologyKey: "topology.kubernetes.io/zone"
            # Rule 2: Medium Priority - Spread across individual Nodes
            - weight: 50
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: incodedemo-api
                topologyKey: "kubernetes.io/hostname"
      # ------------------------------
      containers:
        - name: api
          image: 485876940116.dkr.ecr.us-east-1.amazonaws.com/incodedemo-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          # livenessProbe:
          #   httpGet:
          #     path: /api/health
          #     port: 3000
          #   initialDelaySeconds: 15
          #   periodSeconds: 20
          # readinessProbe:
          #   httpGet:
          #     path: /api/health
          #     port: 3000
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: incodedemo-api
  labels:
    app: incodedemo-api
spec:
  type: ClusterIP
  selector:
    app: incodedemo-api
  ports:
    - name: http
      port: 80        # exposed on port 80
      targetPort: 3000 # forwards to container port 3000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incodedemo-api
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb   
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: incodedemo-api
                port:
                  number: 80
